# autoblocks-charades

Python/langchain/: apify.py  hey.py  job_scraper.py  llamahub.py  main.py  pyproject.toml  scrap_fly_indeed.py  scrapeops.py  scrapingdog.py  serp.py
Python/openai-manual/: main.py
